<resources>
    <string name="app_name">TeleFeed</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="welcome_subtitle">Explore news</string>
    <string name="welcome_title">Enter TeleFeed</string>
    <string name="code_title">Enter code</string>
    <string name="code_subtitle">Code has been sent to your Telegram Account.</string>
    <string name="code_hint">Code</string>
    <string name="code_action">Explore news</string>
    <string name="error">An error occurred. </string>
    <string name="custom_api"><u>Problems? Use your own API Key</u></string>
    <string name="media_counter">%s from %p</string>
    <string name="today">today at </string>
    <string name="search_hint">Search post</string>
    <string name="share_post">Share post</string>
    <string name="share_post_message">Message</string>
    <string name="loading_text">Loading...</string>
    <string name="loading_subtitle">Your news will be ready soon.</string>
    <string name="yesterday">yesterday, </string>
    <string name="comments">Comments</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="read_more">Read all</string>
    <string name="settings">Settings</string>
    <string name="settings_custom_api">Use custom API key</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_select_channels">Ignore sources</string>
    <string name="ignore_title">Ignore channels</string>
    <string name="ignore_count">Selected %s channels</string>
    <string name="ignore_apply">Changes will be applied soon</string>
    <string name="settings_cache_size">Сache (%s MB, auto-optimizing)</string>
    <string name="comments_unavailable">Unfortunately, comments are unavailable</string>
    <string name="search_results">Search results</string>
    <string name="search_not_found">No articles found</string>

    <string name="api_key_guide">You can apply your Telegram App Id for TeleFeed. \n
        1. Go to my.telegram.org \n
        2. Login into the system \n
        3. Go to the \'App\' page \n
        4. Copy App Id and App Hash \n
        5. Enjoy your own API without third-parties!\n\n
        Warning: app will restart</string>
    <string name="switch_dynamic_images">Dynamic image sizes</string>
    <string name="dynamic_on">Using this mode may affect the smoothness of the scroll</string>
</resources>
