<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorBackground"
    tools:context=".activities.auth.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_main" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_title"
        android:fontFamily="@font/golos_medium"
        android:textSize="28sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome_subtitle"
        android:fontFamily="@font/golos_regular"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout

        android:id="@+id/linear"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:animateLayoutChanges="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/numberEditText"

            android:background="@drawable/edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:fontFamily="@font/golos_medium"


            android:inputType="text|phone"
            android:paddingHorizontal="10dp"
            android:textColorHint="@color/colorHintText"
           />
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:visibility="gone"


            android:layout_marginTop="20dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:fontFamily="@font/golos_medium"

            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textColorHint="@color/colorHintText"
           />
    </LinearLayout>




    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"

        android:background="@drawable/button"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/golos_medium"
        android:letterSpacing="0"
        android:onClick="onNextButtonClick"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />


    <TextView
        android:visibility="gone"
        android:id="@+id/helpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/golos_medium"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:text="@string/custom_api"
        android:textSize="14sp"
        android:textColor="@color/colorHintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>