<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.auth.WelcomeActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/code_title"
        android:fontFamily="@font/golos_medium"
        android:textSize="28sp"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/code_subtitle"
        android:fontFamily="@font/golos_regular"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/code_hint"
        android:fontFamily="@font/golos_medium"

        android:inputType="text|number"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/colorHintText"
        app:layout_constraintBottom_toTopOf="@+id/buttonExplore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonExplore"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"



        android:background="@drawable/button"

        android:fontFamily="@font/golos_medium"
        android:letterSpacing="0"
        android:text="@string/code_action"
        android:textColor="@color/colorWhiteText"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:tint="@color/foregroundIcons"
        android:background="?actionBarItemBackground"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow" />


</androidx.constraintlayout.widget.ConstraintLayout>