<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".CustomAPI">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"

        android:autoLink="all"
        android:fontFamily="@font/golos_medium"
        android:textSize="18sp"


        android:text="@string/api_key_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/appHashEditText"
        android:layout_width="match_parent"

        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext"


        android:ems="10"
        android:fontFamily="@font/golos_medium"
        android:gravity="center"
        android:hint="API Hash"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/colorHintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/appIdEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext"
        android:ems="10"


        android:fontFamily="@font/golos_medium"
        android:gravity="center"
        android:hint="App Id"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/colorHintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appHashEditText" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="20dp"

        android:layout_marginEnd="30dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/golos_medium"
        android:letterSpacing="0"

        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIdEditText" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="20dp"

        android:layout_marginEnd="20dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/golos_medium"

        android:letterSpacing="0"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/appIdEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>